syntax = "proto3";
 
package recapi;
option go_package = "github.com/uopensail/recgo-engine/recapi";


message FeatureValue {
  int64 iv=1;
  float fv=2;
  string sv=3;
  repeated int64 ivs=4;
  repeated float fvs=5;
  repeated string svs =6;
}

message Feature {
  int32 type =1;  
  FeatureValue value=2;
}
 
message RecRequest {
  string user_id = 1;                             // 用户id
  string device_id = 2;                           // 设备idmessage
  int32 pageno = 3;                               // 页码
  int32 count = 4;                                // 请求的数量
  string relate_item = 5;                         // 相关推荐：详情页的商品id
  string trace_id = 6;                            // 请求id
  string  scene =7;                             //频道tab标识
  repeated string exclude_items = 8;
  map<string, Feature> user_feature = 9;             
}

message RecResult {
  string expids = 1;                              // 实验id列表, 用","分割
  string user_id = 2;                             // 用户ID
  string device_id = 3;                           // 设备 ID
  string trace_id = 4;                            // 请求id
  repeated string items = 5;                      // 返回结果，商品id
  repeated string items_trace = 6;                // 返回结果，商品召回、排版信息
}
 
message RecResponse {
  int32 code = 1;                           // 状态 0 表示正常
  string msg = 2;                           // 错误时的描述字符
  RecResult data =3;
}

service RecService {
  rpc Recommend(RecRequest) returns (RecResponse){}
  rpc RelateRecommend(RecRequest) returns (RecResponse){}
}